--- a/trial.ipynb
+++ b/trial.ipynb
@@ -154,6 +154,7 @@
         "    VehicleType_bike: int\n",
         "    VehicleType_cycle: int\n",
         "    VehicleType_truck: int\n",
+        "    VehicleType_car: int\n",
         "\n",
         "data = pw.demo.replay_csv(\"parking_stream.csv\", schema=ParkingSchema, input_rate=1000)\n",
         "\n",
