--- a/MODEL_2.ipynb
+++ b/MODEL_2.ipynb
@@ -181,7 +181,11 @@
         "    .reduce(\n",
         "        t=pw.this._pw_window_end,\n",
         "        SystemCodeNumber=pw.reducers.any(pw.this.SystemCodeNumber),\n",
-        "        AvgPrice_Model2=pw.reducers.mean(pw.this.Model2Price_Smoothed)\n",
+        "        sum_price=pw.reducers.sum(pw.this.Model2Price_Smoothed),\n",
+        "        count_price=pw.reducers.count(pw.this.Model2Price_Smoothed),\n",
+        "    )\n",
+        "    .with_columns(
+        "          AvgPrice_Model2 = (pw.this.sum_price / pw.this.count_price),\n",
         "    )\n",
         ")"
       ],
