--- a/MODEL_2.ipynb
+++ b/MODEL_2.ipynb
@@ -184,7 +184,7 @@
         "        sum_price=pw.reducers.sum(pw.this.Model2Price_Smoothed),\n",
         "        count_price=pw.reducers.count(pw.this.Model2Price_Smoothed),\n",
         "    )\n",
-        "    .with_columns(
+        "    .with_columns(\n",
         "          AvgPrice_Model2 = (pw.this.sum_price / pw.this.count_price),\n",
         "    )\n",
         ")"
