--- a/MODEL_3.ipynb
+++ b/MODEL_3.ipynb
@@ -173,11 +173,11 @@
         "    ).reduce(\n",
         "        t=pw.this._pw_window_end,\n",
         "        SystemCodeNumber=pw.reducers.any(pw.this.SystemCodeNumber),\n",
-        "        sum_price=pw.reducers.sum(pw.this.Model2Price_Smoothed),\n",
-        "        count_price=pw.reducers.count(pw.this.Model2Price_Smoothed),\n",
+        "        sum_price=pw.reducers.sum(pw.this.Model3Price_Competitive),\n",
+        "        count_price=pw.reducers.count(pw.this.Model3Price_Competitive),\n",
         "    )\n",
         "    .with_columns(\n",
-        "          AvgPrice_Model2 = (pw.this.sum_price / pw.this.count_price),\n",
+        "          AvgPrice_Model3 = (pw.this.sum_price / pw.this.count_price),\n",
         "    )\n",
         ")\n",
         "\n",
